# CPYD-P1

./: .gitignore  CMakeLists.txt  Data Analysis copy.ipynb  Data Analysis.ipynb  README.md  color.h  explosion.h  figure.h  main.c
